examples/test/testpolicy15825.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15825
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key30: value16
      key33: value5
      key26: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value37
          key10: value39
          key14: value3
      podSelector:
        matchLabels:
          key42: value37
